36-suites-for-study/suite-32/marshallward-f90nml-81508928.passed.log
travis_fold:start:system_info[0K[33;1mBuild system information[0m
Build language: python
Build id: ''
Job id: ''
[34m[1mBuild image provisioning date and time[0m
Thu Feb  5 15:09:33 UTC 2015
[34m[1mOperating System Details[0m
Distributor ID:	Ubuntu
Description:	Ubuntu 12.04.5 LTS
Release:	12.04
Codename:	precise
[34m[1mLinux Version[0m
3.13.0-29-generic
[34m[1mCookbooks Version[0m
a68419e https://github.com/travis-ci/travis-cookbooks/tree/a68419e
[34m[1mGCC version[0m
gcc (Ubuntu/Linaro 4.6.3-1ubuntu5) 4.6.3
Copyright (C) 2011 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

[34m[1mLLVM version[0m
clang version 3.4 (tags/RELEASE_34/final)
Target: x86_64-unknown-linux-gnu
Thread model: posix
[34m[1mPre-installed Ruby versions[0m
ruby-1.9.3-p551
[34m[1mPre-installed Node.js versions[0m
v0.10.36
[34m[1mPre-installed Go versions[0m
1.4.1
[34m[1mRedis version[0m
redis-server 2.8.19
[34m[1mriak version[0m
2.0.2
[34m[1mMongoDB version[0m
MongoDB 2.4.12
[34m[1mCouchDB version[0m
couchdb 1.6.1
[34m[1mNeo4j version[0m
1.9.4
[34m[1mRabbitMQ Version[0m
3.4.3
[34m[1mElasticSearch version[0m
1.4.0
[34m[1mInstalled Sphinx versions[0m
2.0.10
2.1.9
2.2.6
[34m[1mDefault Sphinx version[0m
2.2.6
[34m[1mInstalled Firefox version[0m
firefox 31.0esr
[34m[1mPhantomJS version[0m
1.9.8
[34m[1mant -version[0m
Apache Ant(TM) version 1.8.2 compiled on December 3 2011
[34m[1mmvn -version[0m
Apache Maven 3.2.5 (12a6b3acb947671f09b81f49094c53f426d8cea1; 2014-12-14T17:29:23+00:00)
Maven home: /usr/local/maven
Java version: 1.7.0_76, vendor: Oracle Corporation
Java home: /usr/lib/jvm/java-7-oracle/jre
Default locale: en_US, platform encoding: ANSI_X3.4-1968
OS name: "linux", version: "3.13.0-29-generic", arch: "amd64", family: "unix"
travis_fold:end:system_info[0K
grep: /etc/apt/sources.list.d/*: No such file or directory
sed: cannot rename /etc/hosts: Device or resource busy
sed: cannot rename /etc/hosts: Device or resource busy
$ cd passed/marshallward/f90nml
travis_time:start:10c95190[0K$ source ~/virtualenv/python3.2/bin/activate

travis_time:end:10c95190:start=1616900233910291613,finish=1616900233918755809,duration=8464196[0K$ python --version
Python 3.2.5
$ pip --version
pip 6.0.7 from /home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages (python 3.2)
travis_fold:start:install.1[0Ktravis_time:start:0133c82b[0K$ if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install ordereddict==1.1; fi

travis_time:end:0133c82b:start=1616900234249391352,finish=1616900234258607332,duration=9215980[0Ktravis_fold:end:install.1[0Ktravis_fold:start:install.2[0Ktravis_time:start:01d01df1[0K$ pip install .
Processing /home/travis/build/passed/marshallward/f90nml
Installing collected packages: f90nml
  Running setup.py install for f90nml
Successfully installed f90nml-0.15

travis_time:end:01d01df1:start=1616900234269287733,finish=1616900237322135648,duration=3052847915[0Ktravis_fold:end:install.2[0Ktravis_fold:start:before_script.1[0Ktravis_time:start:073c74fc[0K$ cd test

travis_time:end:073c74fc:start=1616900237331947311,finish=1616900237339728989,duration=7781678[0Ktravis_fold:end:before_script.1[0Ktravis_fold:start:before_script.2[0Ktravis_time:start:0c4ac29c[0K$ pip install -r requirements_test.txt
Collecting coverage==3.7.1 (from -r requirements_test.txt (line 1))
  Downloading https://files.pythonhosted.org/packages/09/4f/89b06c7fdc09687bca507dc411c342556ef9c5a3b26756137a4878ff19bf/coverage-3.7.1.tar.gz (284kB)
Collecting coveralls (from -r requirements_test.txt (line 3))
  Downloading https://files.pythonhosted.org/packages/54/f5/a6431412a456267b43b03ebd3670d8e196754f5280a2409a4c9ceaccf192/coveralls-3.0.1-py2.py3-none-any.whl
Collecting docopt>=0.6.1 (from coveralls->-r requirements_test.txt (line 3))
  Downloading https://files.pythonhosted.org/packages/a2/55/8f8cab2afd404cf578136ef2cc5dfb50baa1761b68c9da1fb1e4eed343c9/docopt-0.6.2.tar.gz
Collecting requests>=1.0.0 (from coveralls->-r requirements_test.txt (line 3))
  Downloading https://files.pythonhosted.org/packages/29/c1/24814557f1d22c56d50280771a17307e6bf87b70727d975fd6b2ce6b014a/requests-2.25.1-py2.py3-none-any.whl (61kB)
Collecting idna<3,>=2.5 (from requests>=1.0.0->coveralls->-r requirements_test.txt (line 3))
  Downloading https://files.pythonhosted.org/packages/a2/38/928ddce2273eaa564f6f50de919327bf3a00f091b5baba8dfa9460f3a8a8/idna-2.10-py2.py3-none-any.whl (58kB)
Collecting certifi>=2017.4.17 (from requests>=1.0.0->coveralls->-r requirements_test.txt (line 3))
  Downloading https://files.pythonhosted.org/packages/5e/a0/5f06e1e1d463903cf0c0eebeb751791119ed7a4b3737fdc9a77f1cdfb51f/certifi-2020.12.5-py2.py3-none-any.whl (147kB)
Collecting urllib3<1.27,>=1.21.1 (from requests>=1.0.0->coveralls->-r requirements_test.txt (line 3))
  Downloading https://files.pythonhosted.org/packages/09/c6/d3e3abe5b4f4f16cf0dfc9240ab7ce10c2baa0e268989a4e3ec19e90c84e/urllib3-1.26.4-py2.py3-none-any.whl (153kB)
Collecting chardet<5,>=3.0.2 (from requests>=1.0.0->coveralls->-r requirements_test.txt (line 3))
  Downloading https://files.pythonhosted.org/packages/19/c7/fa589626997dd07bd87d9269342ccb74b1720384a4d739a1872bd84fbe68/chardet-4.0.0-py2.py3-none-any.whl (178kB)
Installing collected packages: chardet, urllib3, certifi, idna, requests, docopt, coveralls, coverage
  
  

  
  
  
  
  
  
  
  
  
  


  
  
  
  
  
  

  
  
  
  

  Running setup.py install for docopt

  Running setup.py install for coverage
    building 'coverage.tracer' extension
    gcc -pthread -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -g -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -fPIC -I/opt/python/3.2.5/include/python3.2mu -c coverage/tracer.c -o build/temp.linux-x86_64-3.2/coverage/tracer.o
    gcc -pthread -shared -L/opt/python/3.2.5/lib -Wl,-rpath=/opt/python/3.2.5/lib build/temp.linux-x86_64-3.2/coverage/tracer.o -L/opt/python/3.2.5/lib -lpython3.2mu -o build/lib.linux-x86_64-3.2/coverage/tracer.cpython-32mu.so
    Installing coverage3 script to /home/travis/virtualenv/python3.2.5/bin
    Installing coverage-3.2 script to /home/travis/virtualenv/python3.2.5/bin
    Installing coverage script to /home/travis/virtualenv/python3.2.5/bin
Successfully installed certifi-2020.12.5 chardet-4.0.0 coverage-3.7.1 coveralls-3.0.1 docopt-0.6.2 idna-2.10 requests-2.25.1 urllib3-1.26.4

travis_time:end:0c4ac29c:start=1616900237350099854,finish=1616900242172884833,duration=4822784979[0Ktravis_fold:end:before_script.2[0Ktravis_time:start:02edde40[0K$ coverage run --source f90nml test_f90nml.py
.....................................
----------------------------------------------------------------------
Ran 37 tests in 0.169s

OK

travis_time:end:02edde40:start=1616900242181935703,finish=1616900242543401422,duration=361465719[0K
[32;1mThe command "coverage run --source f90nml test_f90nml.py" exited with 0.[0m
travis_fold:start:after_success.1[0Ktravis_time:start:07f4e9ac[0K$ coverage report -m
Name                                                            Stmts   Miss  Cover   Missing
---------------------------------------------------------------------------------------------
/home/travis/build/passed/marshallward/f90nml/f90nml/__init__       8      0   100%   
/home/travis/build/passed/marshallward/f90nml/f90nml/findex        20      1    95%   25
/home/travis/build/passed/marshallward/f90nml/f90nml/fpy           29      0   100%   
/home/travis/build/passed/marshallward/f90nml/f90nml/namelist     163      2    99%   14-15
/home/travis/build/passed/marshallward/f90nml/f90nml/parser       304      1    99%   526
---------------------------------------------------------------------------------------------
TOTAL                                                             524      4    99%   

travis_time:end:07f4e9ac:start=1616900242554800014,finish=1616900242803824923,duration=249024909[0Ktravis_fold:end:after_success.1[0Ktravis_fold:start:after_success.2[0Ktravis_time:start:035231c4[0K$ coveralls
Traceback (most recent call last):
  File "/home/travis/virtualenv/python3.2.5/bin/coveralls", line 7, in <module>
    from coveralls.cli import main
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/coveralls/__init__.py", line 1, in <module>
    from .api import Coveralls
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/coveralls/api.py", line 10, in <module>
    import requests
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/urllib3/__init__.py", line 13, in <module>
    from .connectionpool import HTTPConnectionPool, HTTPSConnectionPool, connection_from_url
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/urllib3/connectionpool.py", line 11, in <module>
    from .connection import (
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/urllib3/connection.py", line 15, in <module>
    from .util.proxy import create_proxy_ssl_context
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/urllib3/util/__init__.py", line 4, in <module>
    from .connection import is_connection_dropped
  File "/home/travis/virtualenv/python3.2.5/lib/python3.2/site-packages/urllib3/util/connection.py", line 70
    LocationParseError(u"'%s', label empty or too long" % host), None
                                                      ^
SyntaxError: invalid syntax

travis_time:end:035231c4:start=1616900242813411725,finish=1616900242957213329,duration=143801604[0Ktravis_fold:end:after_success.2[0K
Done. Your build exited with 0.
